2010-07-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (frame-title-format): system-name must in the last.

2010-07-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable transient-mark-mode.

2010-07-10  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el:
	doxymacs,sql-indent,highlight-symbol,highlight-parentheses now
	compilation with emacs-21.

	* init-basic.el: Enable move-line-up and move-line-down.

2010-07-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Compilation with emacs-21.

2010-07-04  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el (toggle-toolbar-menu): Add change to csv-mode menu.

	* init-misc.el: Add csv-mode.

2010-07-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (text-mode-hook): Add imenu for text-mode.

	* init-misc.el (csharp-mode-hook): Add imenu for C#.

2010-06-29  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set magic-mode-alist for objc-mode.

2010-06-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (company--disabled-backends): Disable
	company-pysmell back-end.

2011-07-08  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set default-major-mode to text-mode.

2010-06-24  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add change major-mode menu.

2011-07-06  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Bind [C-u f3] to highlight-symbol-prev.

	* init-basic.el (hs-set-up-overlay): Use mode-line face to display hideshow-overlay.

	* init-misc.el: Disable hl-s-mode in help-mode.

2010-06-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set background color to lightcyan.

2010-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Enable global-semantic-decoration-mode for include.

2010-06-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-mode-alist): .mm alist to objc-mode.

	* init-toolbar.el: Remove the some buttons in the tool bar.

2010-06-19  Meteor Liu  <meteor1113@gmail.com>
